--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import './components/header-logo';
 @import './components/header-nav';
 @import './components/header-contact';
+@import './components/header-button';
 @import './components/hero';
 @import './components/advantages';
 @import './components/working-section';
