--- a/sass/components/_header-contact.scss
+++ b/sass/components/_header-contact.scss
@@ -2,6 +2,10 @@
     display: flex;
     margin-left: auto;
 
+    @media screen and (max-width:480px) {
+            display: none;
+        }
+
     &__item{
 
         &:not(:last-child){
