mobile styles added

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -34,10 +34,10 @@ a {
     margin-right: auto;
 }
 
-.padding--top {
-    padding-top: 94px;
+.padding--mobile-top {
+    padding-top: 60px;
 }
 
-.padding--bottom {
-    padding-bottom: 94px;
+.padding--mobile-bottom {
+    padding-bottom: 60px;
 }
