--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,23 +1,40 @@
+// @import './utils/variables';
+// @import './base/normalize';
+// @import './utils/visually-hidden';
+// @import './utils/placeholders';
+// @import './base/base';
+// @import './utils/mixin';
+// @import './components/page-header';
+// @import './components/header-logo';
+// @import './components/header-nav';
+// @import './components/header-contact';
+// @import './components/header-button';
+// @import './components/hero';
+// @import './components/advantages';
+// @import './components/working-section';
+// @import './components/team-section';
+// @import './components/developer';
+// @import './components/social';
+// @import './components/our-works';
+// @import './components/footer';
+// @import './components/modal';
+// @import './components/portfolio-main';
+// @import './components/portfolio-navigation';
+// @import './components/portfolio-product';
+
+/* mobile first styles */
 @import './utils/variables';
-@import './base/normalize';
 @import './utils/visually-hidden';
 @import './utils/placeholders';
-@import './base/base';
 @import './utils/mixin';
-@import './components/page-header';
-@import './components/header-logo';
-@import './components/header-nav';
-@import './components/header-contact';
+@import './base/normalize';
+@import './base/base';
+@import './mobile-first/page-header';
 @import './components/header-button';
-@import './components/hero';
-@import './components/advantages';
-@import './components/working-section';
-@import './components/team-section';
-@import './components/developer';
-@import './components/social';
-@import './components/our-works';
-@import './components/footer';
-@import './components/modal';
-@import './components/portfolio-main';
-@import './components/portfolio-navigation';
-@import './components/portfolio-product';
+@import './mobile-first/hero-section';
+@import './mobile-first/advantages-section';
+@import './mobile-first/working-section';
+@import './mobile-first/team-block-section';
+@import './mobile-first/our-works-section';
+@import './mobile-first/footer-section';
+@import './mobile-first/modal-section';
