--- a/sass/components/_developer.scss
+++ b/sass/components/_developer.scss
@@ -4,7 +4,7 @@
     &__name{
         font-weight: 500;
         font-size: 16px;
-        line-height: 19px;
+        line-height: 1.187;
         text-align: center;
         letter-spacing: 0.03em;
         color: $maincolor;
@@ -13,7 +13,7 @@
     &__position{
         font-weight: 400;
         font-size: 16px;
-        line-height: 19px;
+        line-height: 1.187;
         text-align: center;
         letter-spacing: 0.03em;
         color: $secondarycolor;
