--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,10 +1,21 @@
 .footer{
     background-color: $footercolor;
+
+    @media screen and (max-width:480px) {
+            padding-top: 60px;
+            padding-bottom: 60px;
+            }
     
     &__content{
         @extend %container;
         display: flex;
         height: 252px;
+
+        @media screen and (max-width:480px) {
+            display: block;
+            width: 100%;
+            height: 100%;
+            }
     }
 }
 
@@ -14,6 +25,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @media screen and (max-width:480px) {
+            display: block;
+            width: 100%;
+            text-align: center;
+            }
 }
 
 .footer-address {
@@ -29,6 +46,7 @@
         padding-bottom: 20px;
     }
 
+
     &__label{
         color: $accentcolor;
     }
@@ -40,6 +58,10 @@
         line-height: 1.71;
         letter-spacing: 0.03em;
         color: $white;
+
+        @media screen and (max-width:480px) {
+            margin-top: 20px;
+            }
     }
 
     &__contact{
@@ -62,6 +84,11 @@
 
 .footer-social{
 
+        @media screen and (max-width:480px) {
+                padding-top: 60px;
+                padding-bottom: 60px;
+                }
+
     &__title{
         font-weight: 700;
         font-size: 14px;
@@ -74,6 +101,11 @@
 
     &__list{
         display: flex;
+        
+            @media screen and (max-width:480px) {
+                justify-content: center;
+                align-items: center;
+                }
     }
 
     &__item{
@@ -125,6 +157,12 @@
                 line-height: 20px;
                 letter-spacing: 0.03em;
                 color: rgba(255, 255, 255, 0.6);
+            }
+
+            @media screen and (max-width:480px) {
+            width: 450px;
+            height: 50px;
+            margin-bottom: 20px;
             }
     }
 
