--- a/sass/components/_header-logo.scss
+++ b/sass/components/_header-logo.scss
@@ -13,6 +13,11 @@
         line-height: 1.19;
         letter-spacing: 0.03em;
         color: $black;
+
+        @media screen and (max-width:480px) {
+                font-size: 24px;
+                line-height: 1.16;
+            }
     }
     
     &__text {
