--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,17 +3,32 @@
     height: 600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/bgImg.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
     background-position: center;
     margin-left: auto;
     margin-right: auto;
     background-color: $footercolor;
     text-align: center;
     padding-top: 200px;
+
+    @media screen and (max-width: 480px){
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        max-width: 480px;
+        max-height: 400px;
+    }
+
 }
 
 .hero-content{
     @extend %container;
+
+
+    @media screen and (max-width:480px) {
+        width: 100%;
+    }
     
     &__title{
         font-style: normal;
@@ -24,6 +39,16 @@
         text-transform: uppercase;
         color: $white;
         margin-bottom: 30px;
+
+        @media screen and (max-width: 480px) {
+                font-weight: 900;
+                font-size: 26px;
+                line-height: 1.61;
+                letter-spacing: 0.06em;
+                text-transform: uppercase;
+                color: $white;
+                margin-bottom: 30px;
+            }
     }
 
     &__button {
@@ -46,5 +71,13 @@
             cursor: pointer;
             background: $accentactive;
         }
+
+            @media screen and (max-width: 480px) {
+                font-weight: 700;
+                font-size: 16px;
+                line-height: 1.88;
+                letter-spacing: 0.06em;
+                color: #FFFFFF;
+            }
     }
 }
