--- a/sass/components/_our-works.scss
+++ b/sass/components/_our-works.scss
@@ -1,35 +1,64 @@
 .our-works{
     @extend %container;
 
-    &__content{
+    @media screen and (max-width:480px){
+        width: 100%;
+    }
 
+    &__content{
+        @media screen and (max-width:480px) {
+                padding-top: 60px;
+                padding-bottom: 60px;
+            }
     }
 
     &__topic{
         font-weight: 700;
         font-size: 36px;
-        line-height: 42px;
+        line-height: 1.166;
         text-align: center;
         letter-spacing: 0.03em;
         color: $maincolor;
         padding-bottom: 50px;
+
+        @media screen and (max-width:480px) {
+                width: 100%;
+                font-size: 28px;
+                line-height: 1.178;
+            }
     }
 
     &__list{
         display: flex;
+
+        @media screen and (max-width:480px) {
+                display: inline-flex;
+                flex-wrap: wrap;
+                margin: -15px;
+            }
     }
 
     &__item{
+        max-width: 210px;
+        max-height: 92px;
 
         &:not(:last-child){
             margin-right: 30px;
+
+            @media screen and (max-width:480px) {
+                    margin-right: 15px;
+                }
         }
+
+            @media screen and (max-width:480px) {
+                width: calc((100%/2)-60px);
+                height: 92px;
+                margin: 3%;
+            }
     }
 
     &__link{
         @include centeredFlex(flex);
-        width: 170px;
-        height: 92px;
         border: 1px solid #AFB1B8;
         border-radius: 4px;
         transition-property: fill, border;
