--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -6,7 +6,7 @@
         @extend %container;
 
         @media screen and (max-width:480px) {
-            width: 480px;
+            width: 100%;
             height: 60px;
             margin: 0;
         }
