--- a/sass/components/_working-section.scss
+++ b/sass/components/_working-section.scss
@@ -1,4 +1,8 @@
 .working{
+    @media screen and (max-width:480px) {
+            display: none;
+        }
+
 
     &__title{
         font-weight: 700;
