--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -1,4 +1,4 @@
-@mixin centeredFlex ($type){
+@mixin centeredFlex ($type:flex){
     display: $type;
     justify-content: center;
     align-items: center;    
