--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -1,5 +1,19 @@
-%container {
-    width: 1200px;
+%container-desktop {
+    max-width: 1200px;
+    padding: 0 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+%container-tablet {
+    max-width: 768px;
+    padding: 0 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+%container-mobile {
+    max-width: 480px;
     padding: 0 15px;
     margin-left: auto;
     margin-right: auto;
