--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
   margin: -1px;
 }
 
-.footer__content, .our-works, .team-block, .advantages, .hero-content, .header {
+.footer__content, .our-works, .team-block, .advantages, .hero-content {
   max-width: 480px;
   padding: 0 15px;
   margin-left: auto;
@@ -320,6 +320,22 @@ a {
   padding-bottom: 60px;
 }
 
+@media screen and (max-width: 480px) {
+  .header {
+    max-width: 480px;
+    padding: 0 15px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header {
+    width: 768px;
+    padding: 0 15px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 .header__content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -333,6 +349,16 @@ a {
 }
 .header__navigation {
   display: none;
+}
+@media screen and (min-width: 768px) {
+  .header__navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .logo {
@@ -353,6 +379,42 @@ a {
   color: #2196F3;
 }
 
+.header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.header-nav__item:not(:last-child) {
+  margin-right: 50px;
+}
+.header-nav__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.header-contact {
+  margin-left: 94px;
+}
+.header-contact__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.header-contact__link {
+  color: #757575;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.02em;
+}
+.header-contact__icon {
+  margin-right: 8px;
+  fill: #757575;
+}
+
 .header-button {
   background-color: transparent;
   border: none;
@@ -365,6 +427,11 @@ a {
 @media screen and (max-width: 480px) {
   .header-button {
     margin-left: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header-button {
+    display: none;
   }
 }
 .header-button__icon--cross {
