--- a/sass/components/_header-button.scss
+++ b/sass/components/_header-button.scss
@@ -9,6 +9,10 @@
             margin-left: auto;
         }
 
+        @media screen and (min-width: 768px){
+            display: none;
+        }
+
     &__icon{
         
 
