--- a/sass/mobile-first/_page-header.scss
+++ b/sass/mobile-first/_page-header.scss
@@ -1,5 +1,17 @@
 .header {
-    @extend %container-mobile;
+    @media screen and (max-width: 480px){
+        max-width: 480px;
+        padding: 0 15px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    @media screen and (min-width: 768px){
+        width: 768px;
+        padding: 0 15px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
 
     &__content{
@@ -10,6 +22,11 @@
 
     &__navigation{
         display: none;
+
+        @media screen and (min-width:768px){
+            display: flex;
+            align-items: center;
+        }
     }
 }
 
@@ -30,5 +47,46 @@
 
     &__text{
         color: $accentcolor;
+    }
+}
+
+.header-nav{
+    display: flex;
+
+    &__item{
+
+
+    &:not(:last-child) {
+            margin-right: 50px;
+        }
+    }
+
+    &__link{
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.02em;
+        color: $maincolor;
+    }
+}
+
+.header-contact{
+    margin-left: 94px;
+
+    &__item{
+        display: flex;
+    }
+
+    &__link{
+        color: $secondarycolor;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 14px;
+        letter-spacing: 0.02em;
+    }   
+
+    &__icon{
+        margin-right: 8px;
+        fill: $secondarycolor;
     }
 }
