--- a/css/main.css
+++ b/css/main.css
@@ -346,6 +346,7 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 80px;
 }
 .header__navigation {
   display: none;
@@ -388,31 +389,65 @@ a {
   margin-right: 50px;
 }
 .header-nav__link {
+  position: relative;
   font-weight: 500;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.142;
   letter-spacing: 0.02em;
   color: #212121;
+  padding: 32px 0;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-nav__link:focus, .header-nav__link:hover, .header-nav__link--current {
+  color: #2196F3;
+}
+.header-nav__link--current::after {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #2196F3;
 }
 
 .header-contact {
   margin-left: 94px;
 }
-.header-contact__item {
+.header-contact__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-.header-contact__link {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #757575;
   font-weight: 500;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 1.166;
   letter-spacing: 0.02em;
+  margin-bottom: 10px;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-contact__link:hover, .header-contact__link:focus {
+  color: #2196F3;
+}
+.header-contact__link:visited {
+  color: #757575;
 }
 .header-contact__icon {
+  height: 14px;
+  width: 14px;
   margin-right: 8px;
   fill: #757575;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-contact__link:focus .header-contact__icon, .header-contact__link:hover .header-contact__icon {
+  fill: #2196F3;
 }
 
 .header-button {
