--- a/sass/mobile-first/_hero-section.scss
+++ b/sass/mobile-first/_hero-section.scss
@@ -1,19 +1,38 @@
 .hero{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 480px;
-    height: 400px;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/bgImg.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    margin-left: auto;
-    margin-right: auto;
+    @media screen and (max-width:767px){
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-width: 480px;
+        height: 400px;
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/bgImg.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+        @media screen and (min-width:768px) {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 768px;;
+            height: 400px;
+            background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/bgImg.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            margin-left: auto;
+            margin-right: auto;
+        }
 }
 
 .hero-content{
-    @extend %container-mobile;
+    max-width: 480px;
+    padding: 0 15px;
+    margin-left: auto;
+    margin-right: auto;
     
 
     &__title {
