--- a/sass/mobile-first/_modal-section.scss
+++ b/sass/mobile-first/_modal-section.scss
@@ -62,8 +62,7 @@
         line-height: 1.5;
         text-align: center;
         letter-spacing: .03em;
-        color: #212121;
-        margin-bottom: 12px;
+        color: $maincolor;
     }
 
     &__block {
@@ -183,7 +182,6 @@
         font-weight: 400;
         font-size: 14px;
         line-height: 1.714;
-        margin-left: 20px;
         padding-left: 28px;
     }
 
@@ -196,32 +194,40 @@
         padding: 0;
         clip: rect(0 0 0 0);
 
-        &:checked+.policy__text {
+        &:checked+.policy__inputbox {
             background-image: url(../image/icon-checked-blue.svg);
             background-size: contain;
             background-color: $accentcolor;
         }
     }
 
-    &__text {
+    &__inputbox {
         position: absolute;
         width: 16px;
-        height: 15px;
-        border: 1.5px solid $black;
+        height: 16px;
+        border: 1px solid black;
         border-radius: 2px;
-        margin-left: -28px;
+        margin-left: -24px;
         transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
         .policy__input:hover+&,
         .policy__input:focus+& {
-            border: 1.5px solid $accentcolor;
+            border: 1px solid $accentcolor;
         }
+    }
+
+    &__text{
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.116;
+        letter-spacing: 0.03em;
+        color: $secondarycolor;
     }
 
     &__link {
         font-weight: 400;
-        font-size: 14px;
-        line-height: 1.714;
+        font-size: 12px;
+        line-height: 1.116;
         letter-spacing: 0.03em;
         text-decoration-line: underline;
         color: $accentcolor;
