--- a/css/main.css
+++ b/css/main.css
@@ -13,13 +13,6 @@
   margin: -1px;
 }
 
-.footer__content, .our-works, .team-block {
-  max-width: 480px;
-  padding: 0 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -645,29 +638,75 @@ a {
 
 .team-block {
   background-color: #F5F4FA;
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-.team-block__topic {
-  font-weight: 700;
-  font-size: 28px;
-  line-height: 1.178;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
-  padding-bottom: 30px;
-}
-.team-block__item {
+  padding: 60px 15px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 450px;
+}
+@media screen and (max-width: 767px) {
+  .team-block {
+    max-width: 480px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .team-block__topic {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.178;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    padding-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team-block__topic {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.178;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    padding-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team-block__list {
+    width: 768px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.team-block__item {
   background: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.team-block__item:not(:last-child) {
-  margin-bottom: 30px;
+@media screen and (max-width: 767px) {
+  .team-block__item {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 450px;
+  }
+  .team-block__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team-block__item {
+    width: 354px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 450px;
+  }
+  .team-block__item:first-child, .team-block__item:nth-child(2) {
+    margin-bottom: 30px;
+  }
 }
 .team-block__image {
   display: block;
@@ -732,9 +771,21 @@ a {
   fill: #ffffff;
 }
 
-.our-works {
-  padding-top: 60px;
-  padding-bottom: 60px;
+@media screen and (max-width: 767px) {
+  .our-works {
+    max-width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 60px 15px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .our-works {
+    width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 60px 15px;
+  }
 }
 .our-works__topic {
   font-weight: 700;
@@ -753,10 +804,21 @@ a {
       flex-wrap: wrap;
   margin: 0 -15px;
 }
-.our-works__item {
-  width: 50%;
-  padding: 0 15px;
-  margin-bottom: 15px;
+@media screen and (max-width: 767px) {
+  .our-works__item {
+    width: 50%;
+    padding: 0 15px;
+    margin-bottom: 15px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .our-works__item {
+    width: 33.33333%;
+    padding: 0 15px;
+  }
+  .our-works__item:first-child, .our-works__item:nth-child(2), .our-works__item:nth-child(3) {
+    margin-bottom: 30px;
+  }
 }
 .our-works__link {
   display: -webkit-box;
@@ -769,7 +831,6 @@ a {
       -ms-flex-align: center;
           align-items: center;
   height: 92px;
-  width: 210px;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
   -webkit-transition-property: fill, border;
@@ -778,6 +839,16 @@ a {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 767px) {
+  .our-works__link {
+    width: 210px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .our-works__link {
+    width: 226px;
+  }
 }
 .our-works__link:hover, .our-works__link:focus {
   border: 1px solid #2196F3;
@@ -795,16 +866,35 @@ a {
   fill: #2196F3;
 }
 
-.footer {
-  max-width: 480px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #2F303A;
-  padding-top: 60px;
-  padding-bottom: 60px;
+@media screen and (max-width: 767px) {
+  .footer {
+    max-width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #2F303A;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
+@media screen and (min-width: 768px) {
+  .footer {
+    width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #2F303A;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
 .footer-address {
   text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .footer-address {
+    display: inline-block;
+    width: 49%;
+  }
 }
 .footer-address__logo {
   font-family: "Raleway";
@@ -843,6 +933,14 @@ a {
   text-align: center;
   padding-top: 60px;
 }
+@media screen and (min-width: 768px) {
+  .footer-social {
+    display: inline-block;
+    width: 49%;
+    padding-top: 0;
+    vertical-align: top;
+  }
+}
 .footer-social__title {
   font-weight: 700;
   font-size: 14px;
@@ -874,8 +972,12 @@ a {
 }
 
 .footer-subscribe {
-  text-align: center;
   padding-top: 60px;
+}
+@media screen and (max-width: 767px) {
+  .footer-subscribe {
+    text-align: center;
+  }
 }
 .footer-subscribe__label {
   display: block;
@@ -945,6 +1047,14 @@ a {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
+@media screen and (min-width: 768px) {
+  .footer-subscribe__input {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 450px;
+  }
+}
 .footer-subscribe__button {
   margin-top: 20px;
   width: 200px;
@@ -965,6 +1075,13 @@ a {
 }
 .footer-subscribe__button:hover, .footer-subscribe__button:focus {
   background-color: #188CE8;
+}
+@media screen and (min-width: 768px) {
+  .footer-subscribe__button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .backdrop {
