--- a/sass/mobile-first/_footer-section.scss
+++ b/sass/mobile-first/_footer-section.scss
@@ -1,18 +1,33 @@
 .footer{
-    max-width: 480px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: $footercolor;
-    padding-top: 60px;
-    padding-bottom: 60px;
-
-    &__content{
-        @extend %container-mobile;
+    @media screen and (max-width:767px){
+        max-width: 480px;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: $footercolor;
+        padding-top: 60px;
+        padding-bottom: 60px;
     }
+
+        @media screen and (min-width:768px) {
+            width: 768px;
+            margin-left: auto;
+            margin-right: auto;
+            background-color: $footercolor;
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
+
+    // &__content{
+    // }
 }
 
 .footer-address{
     text-align: center;
+
+    @media screen and (min-width:768px){
+        display: inline-block;
+        width: 49%;
+    }
 
     &__logo{
         font-family: 'Raleway';
@@ -60,6 +75,13 @@
     text-align: center;
     padding-top: 60px;
 
+    @media screen and (min-width:768px) {
+        display: inline-block;
+        width: 49%;
+        padding-top: 0;
+        vertical-align: top;
+        }
+
     &__title{
         font-weight: 700;
         font-size: 14px;
@@ -91,8 +113,12 @@
 }
 
 .footer-subscribe{
-    text-align: center;
     padding-top: 60px;
+
+    @media screen and (max-width:767px){
+        text-align: center;
+    }
+
 
     &__label{
         display: block;
@@ -126,6 +152,13 @@
             letter-spacing: 0.03em;
             color: rgba(255, 255, 255, 0.6);
         }
+
+        @media screen and (min-width:768px){
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 450px;
+        }
     }    
 
     &__button{
@@ -147,6 +180,12 @@
         &:hover,
         &:focus {
             background-color: $accentactive;
+        }
+
+        @media screen and (min-width:768px){
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
     }
 
