--- a/sass/mobile-first/_our-works-section.scss
+++ b/sass/mobile-first/_our-works-section.scss
@@ -1,10 +1,22 @@
 .our-works{
-    @extend %container-mobile;
-    padding-top: 60px;
-    padding-bottom: 60px;
+        @media screen and (max-width:767px){
+            max-width: 480px;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 60px 15px;
+        }
 
-    // &__content{
-    // }
+        @media screen and (min-width:768px) {
+            width: 768px;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 60px 15px;
+            }
+        
+    
+
+    &__content{
+    }
 
     &__topic{
         font-weight: 700;
@@ -23,15 +35,33 @@
     }
 
     &__item{
-        width: 50%;
-        padding: 0 15px;
-        margin-bottom: 15px;
+        @media screen and (max-width:767px){
+            width: 50%;
+            padding: 0 15px;
+            margin-bottom: 15px;
+        }
+
+        @media screen and (min-width: 768px){
+            width: 33.33333%;
+            padding: 0 15px;
+            
+            &:first-child, &:nth-child(2), &:nth-child(3){
+                margin-bottom: 30px;
+            }
+        }
     }
 
     &__link{
+        @media screen and (max-width:767px){
+            width: 210px;
+        }
+
+        @media screen and (min-width:768px){
+            width: 226px;
+        }
+
         @include centeredFlex(flex);
         height: 92px;
-        width: 210px;
         border: 1px solid #AFB1B8;
         border-radius: 4px;
         transition-property: fill, border;
@@ -42,6 +72,8 @@
         &:focus {
             border: 1px solid $accentcolor;
         }
+
+        
 
     }
 
