--- a/sass/mobile-first/_team-block-section.scss
+++ b/sass/mobile-first/_team-block-section.scss
@@ -1,33 +1,72 @@
 .team-block{
-    @extend %container-mobile;
     background-color: $secondarybgcolor;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding: 60px 15px;
+    margin-left: auto;
+    margin-right: auto;
 
-    &__topic{
-        font-weight: 700;
-        font-size: 28px;
-        line-height: 1.178;
-        text-align: center;
-        letter-spacing: 0.03em;
-        
-        color: $maincolor;
-        padding-bottom: 30px;
+    @media screen and(max-width:767px){
+        max-width: 480px;
     }
 
-    // &__list{
-    // }
+    &__topic{
+        @media screen and (max-width:767px){
+            font-weight: 700;
+            font-size: 28px;
+            line-height: 1.178;
+            text-align: center;
+            letter-spacing: 0.03em;
+            color: $maincolor;
+            padding-bottom: 30px;
+        }
+
+                @media screen and (min-width:768px) {
+                    font-weight: 700;
+                    font-size: 28px;
+                    line-height: 1.178;
+                    text-align: center;
+                    letter-spacing: 0.03em;
+                    color: $maincolor;
+                    padding-bottom: 30px;
+                }
+    }
+
+    &__list{
+
+        @media screen and (min-width:768px){
+            width: 768px;
+            display:flex;
+            flex-wrap: wrap;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
 
     &__item{
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 450px;
         background: $white;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
+
+        @media screen and (max-width:767px){
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 450px;
+            
         
-        &:not(:last-child){
-            margin-bottom: 30px;
+            &:not(:last-child) {
+                margin-bottom: 30px;
+            }
+        }
+
+        @media screen and (min-width:768px){
+            width: 354px;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 450px;
+
+            &:first-child,
+            &:nth-child(2){
+                margin-bottom: 30px;
+            }
         }
     }
 
